# retail-suite-pro

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md
crates/shared-kernel/: Cargo.toml
docker/store-api/: config.yaml
migrations/: 20260403103651_setup_init.down.sql  20260403103651_setup_init.up.sql
services/store-api/: Cargo.toml
services/store-api/src/: constants.rs  lib.rs  server.rs
services/store-api/src/config/: database.rs  errors.rs  mod.rs  telemetry.rs
services/store-api/src/errors/: app.rs
services/store-ui/: README.md  package.json
