[workspace]
resolver = "3"
members = ["crates/*", "services/store-api"]

[workspace.dependencies]
axum = { version = "0.8.8" }
tokio = { version = "1.51.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "macros",
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
  "fmt",
  "json",
] }
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8", default-features = false, features = [
  "cors",
  "trace",
] }
