[package]
name = "store-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "store_api_lib"
path = "src/lib.rs"

[[bin]]
name = "store-api"
path = "src/server.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
